--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -56,6 +56,7 @@
         height: calc(100vh - 100px);
         background-color: #2f3e51;
         padding-top: 20px;
+        overflow: scroll;
         
           &__top{
             font-size: 15px;
@@ -103,6 +104,7 @@
         background-color: #fafafa;
         padding-left: 40px;
         padding-top: 35px;
+        overflow: scroll;
 
         &__top{
           &__word{
@@ -120,27 +122,10 @@
             margin-top: 12px;
             color: #434a54;
             font-size: 14px;
+            margin-bottom: 46px;
           }
         }
-        &__bottom{
-          margin-top: 46px;
-          &__word{
-            color: #333333;
-            font-size: 16px;
-            display: flex;
-
-            &__day{
-              color: #999999;
-              font-size: 12px;
-              margin-left: 15px;
-            }
-          }
-          &__coment{
-            margin-top: 12px;
-            color: #434a54;
-            font-size: 14px;
-          }
-        }
+        
       }
       &__form{
         height: 90px;
