--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -10,6 +10,7 @@
 -#         = message.content
 -#     = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
 
+.message{data: {message: {id: message.id}}}
 
 .chat-main__groups__top
   .chat-main__groups__top__word
